added favorite game to index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>My Second Project</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <div>My name is _______</div>
-    <div>My favorite hobby is _______</div>
+      <h1>Hello, World!</h1>
+    <div>My name is Danielle Garcia</div>
+    <div>My favorite hobby is Drawing</div>
+    <div>My favorite food is Pasta</div>
+    <div>My favortive game is Cuphead</div>
 </body>
 </html>
