--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <div>My name is _______</div>
-    <div>My favorite hobby is _______</div>
+    <div>My name is Danielle Garcia</div>
+    <div>My favorite hobby is Drawing</div>
     <div>My favorite food is pizza.</div>
     <div>My favorite game is Cuphead.</div>
 </body>
