dan was here part 2

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div>My favorite hobby is Drawing</div>
     <div>My favorite food is pizza.</div>
     <div>My favorite game is Cuphead.</div>
+    <div>dan was here again</div>
 </body>
 </html>
 
