--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div>My name is Danielle Garcia</div>
     <div>My favorite hobby is Drawing</div>
     <div>My favorite food is pizza.</div>
-    <div>My favorite game is Cuphead.</div>
-    <div>dan was here again</div>
+    <div>cuphead is an epic game</div>
+   
 </body>
 </html>
 
