--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>My name is Danielle Garcia</div>
     <div>My favorite hobby is Drawing</div>
     <div>My favorite food is pizza.</div>
-    <div>My favorite game is Cuphead.</div>
+    <div>My favorite game is uphead.</div>
 </body>
 </html>
 
